Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -1,4 +1,4 @@
-# Introduction to Georgian national Labor Force Survey (LFS)
+# Introduction to Georgian national Labour Force Survey (LFS)
 
 - [What is the GEO LFS](#what-is-the-geo-lfs)
 - [What does the GEO LFS cover?](#what-does-the-geo-lfs-cover)
@@ -9,7 +9,9 @@
 
 ## What is the GEO LFS?
 
-The Georgian Labor Force Survey (LFS) is a household-based sample survey conducted by the Central Statistical Agency (CSA). This survey was firstly undertaken in 1999 followed by LFS 2005 as the second one in the LFS series. Till the birth of LFS 1999, there has not been a comprehensive national labor force survey representing both urban and rural area in Ethiopia. Both the 1981/82 and 1987/88 surveys only covered the rural part of the country. Therefore, the LFS came out to cover both the urban and rural areas of all regions (except Gambella region, Affar Region, and Somali) in Ethiopia to fill the vancancy of national statistics.
+The Georgian Labour Force Survey (LFS) is a household-based sample survey conducted by the Central Statistical Agency (CSA). This survey was firstly undertaken in 1999 followed by LFS 2005 as the second one in the LFS series. Till the birth of LFS 1999, there has not been a comprehensive national labor force survey representing both urban and rural area in Ethiopia. Both the 1981/82 and 1987/88 surveys only covered the rural part of the country. Therefore, the LFS came out to cover both the urban and rural areas of all regions (except Gambella region, Affar Region, and Somali) in Ethiopia to fill the vancancy of national statistics.
+
+Between 1998 and 2016, the labour force indicators were from another survey, Integrated Household Survey (IHS). The labour force module was seperated from the IHS and became an independent survey in 2017. During 1998-2016, IHS maintained a sample size of 3,400 households whereas LFS maintained sample size of 6,400 households since 2017.
 
 
 ## What does the GEO LFS cover?
@@ -18,14 +20,14 @@ The GEO LFS mainly covers detailed information on demographic details, including
 
 Years and sample size of LFS harmonized for GLD are:
 
-| **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **Officially Reported Sample Size(# HH)**	| **Officially Reported Population (# Individuals)** |
-| :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	| :-------:	|
-| 2017 | 20,486         |  54,824     |  12,049,182  |    | |
-| 2018 | 20,347         |  58,636     |  12,136,511  | N/A | N/A |
-| 2019 | 21,501         |  61,386     |  12,148,502  | N/A | N/A |
-| 2020 | 20,697         |  58,979     |  12,074,070  | N/A | N/A |
-| 2021 | 21,367         |  60,837     |  12,041,059  | N/A | N/A |
-| 2022 | 21,366         |  60,262     |  11,955,709  | N/A | N/A |
+| **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	|
+| :------:	| :-------:		| :-------:	 	| :-------:	 	|
+| 2017 | 20,486         |  54,824     |  12,049,182  | 
+| 2018 | 20,347         |  58,636     |  12,136,511  |
+| 2019 | 21,501         |  61,386     |  12,148,502  |
+| 2020 | 20,697         |  58,979     |  12,074,070  |
+| 2021 | 21,367         |  60,837     |  12,041,059  | 
+| 2022 | 21,366         |  60,262     |  11,955,709  | 
 
 All the four years' official annual reports are provided in the table above through the links attached to each year. The officially reported HH sample size all came from their annual reports. 
 
