--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -22,14 +22,14 @@ Years and sample size of LFS harmonized for GLD are:
 
 | **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	|
 | :------:	| :-------:		| :-------:	 	| :-------:	 	|
-| 2017 | 20,486         |  54,824     |  12,049,182  | 
-| 2018 | 20,347         |  58,636     |  12,136,511  |
-| 2019 | 21,501         |  61,386     |  12,148,502  |
-| 2020 | 20,697         |  58,979     |  12,074,070  |
-| 2021 | 21,367         |  60,837     |  12,041,059  | 
-| 2022 | 21,366         |  60,262     |  11,955,709  | 
+| [2017](utilities/report/GEO_2017_report.pdf) | 20,486         |  54,824     |  12,049,182  | 
+| [2018](utilities/report/GEO_2018_report.pdf) | 20,347         |  58,636     |  12,136,511  |
+| [2019](utilities/report/GEO_2019_report.pdf) | 21,501         |  61,386     |  12,148,502  |
+| [2020](utilities/report/GEO_2020_report.pdf) | 20,697         |  58,979     |  12,074,070  |
+| [2021](utilities/report/GEO_2021_report.pdf) | 21,367         |  60,837     |  12,041,059  | 
+| [2022](utilities/report/GEO_2022_report.pdf) | 21,366         |  60,262     |  11,955,709  | 
 
-All the four years' official annual reports are provided in the table above through the links attached to each year. The officially reported HH sample size all came from their annual reports. 
+All the six years' official annual reports are provided in the table above through the links attached to each year. The officially reported HH sample size all came from their annual reports. 
 
 Note that the number of households in our harmonized datasets do not equal the number of sample size in each year's annual report. We commonly created HH identifiers using seven original variables: region, zone, wereda, town, kefetegna, Kebele, and enumeration area serial number according to their processing methodology. Even though the HH sample sizes do not match the reported size, the expanded population are quite close to their official estimates. It might be the case that the CSA has adjusted the weights in the raw datasets so as to match the population estimates.      
 
