Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -11,7 +11,7 @@
 
 The Georgian Labour Force Survey (LFS) is a household-based sample survey conducted by the Central Statistical Agency (CSA). This survey was firstly undertaken in 1999 followed by LFS 2005 as the second one in the LFS series. Till the birth of LFS 1999, there has not been a comprehensive national labor force survey representing both urban and rural area in Ethiopia. Both the 1981/82 and 1987/88 surveys only covered the rural part of the country. Therefore, the LFS came out to cover both the urban and rural areas of all regions (except Gambella region, Affar Region, and Somali) in Ethiopia to fill the vancancy of national statistics.
 
-Between 1998 and 2016, the labour force indicators were from another survey, Integrated Household Survey (IHS). The labour force module was seperated from the IHS and became an independent survey in 2017. During 1998-2016, IHS maintained a sample size of 3,400 households whereas LFS maintained sample size of 6,400 households since 2017.
+Between 1998 and 2016, the labour force indicators were from another survey, Integrated Household Survey (IHS). The labour force module was seperated from the IHS and became an independent survey in 2017. During 1998-2016, IHS maintained a sample size of 3,400 households whereas LFS maintained sample size of about 6,400 households per quarter since 2017.
 
 
 ## What does the GEO LFS cover?
@@ -29,15 +29,11 @@ Years and sample size of LFS harmonized for GLD are:
 | [2021](utilities/report/GEO_2021_report.pdf) | 21,367         |  60,837     |  12,041,059  | 
 | [2022](utilities/report/GEO_2022_report.pdf) | 21,366         |  60,262     |  11,955,709  | 
 
-All the six years' official annual reports are provided in the table above through the links attached to each year. The officially reported HH sample size all came from their annual reports. 
-
-Note that the number of households in our harmonized datasets do not equal the number of sample size in each year's annual report. We commonly created HH identifiers using seven original variables: region, zone, wereda, town, kefetegna, Kebele, and enumeration area serial number according to their processing methodology. Even though the HH sample sizes do not match the reported size, the expanded population are quite close to their official estimates. It might be the case that the CSA has adjusted the weights in the raw datasets so as to match the population estimates.      
-
+All the six years' official annual reports are provided in the table above through the links attached to each year. Each year's annual report mainly covers employed and unemployed rates as well as their changes compared to the previous year.    
 
 ## Where can the data be found?
 
-The microdata of ETH LFS are unfortunately not publicly available. All data are World Bank internal use only. 
-
+Data from 2017 to 2022 are publicly available on [Georgia National Statistics Office website](https://www.geostat.ge/en/modules/categories/130/labour-force-survey-databases). 
 
 ## What is the sampling procedure?
 
