Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -16,7 +16,7 @@ Between 1998 and 2016, the labour force indicators were from another survey, Int
 
 ## What does the GEO LFS cover?
 
-The GEO LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. Years used for harmonization range from 2017 to 2022 continuously, 6 years in total.
+The GEO LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days for all private household members aged 15 and above. Years used for harmonization range from 2017 to 2022 continuously, 6 years in total.
 
 Years and sample size of LFS harmonized for GLD are:
 
@@ -37,20 +37,11 @@ Data from 2017 to 2022 are publicly available on [Georgia National Statistics Of
 
 ## What is the sampling procedure?
 
-The sampling procedure is a mixture of two-stage cluster and three-stage cluster sample design. Firstly, the whole country is divided into three broad categories: *rural*, *major urban centers*, and *other urban centers*. For category 1-rural and category 2-major urban areas, a stratified two-stage cluster sample design was used, which selects primary sampling units (PSU: enumeration areas) and secondary sampling units (SSU: households). But for other urban centers, a stratified three-stage cluster sample design was adopted. The PSUs are urban centers follwed by enumeration areas (EA) as SSUs and last but not least, households. For all four years. ETH LFS are representative at urban/rural parts of region level. 
+The GEO LFS uses a stratified random sampling design with 12 regions being the primary sampling unit, and households as the secondary sampling unit. For all six years, GEO LFS are representative at urban/rural parts of region level. 
 
-More details of the sampling frame & procedure are included in each year's annual report. Here is an example of [LFS 2013](utilities/nlfs_analytical_report_labor_force_2013.pdf) (page 19/20 of the PDF):
+Following the technical guidance from the World Bank and other international organization, the GEO LFS revisits a certain proportion of households to build the LFS into panel data. Between 1998 and 2016, each sampled household was interviewed four times (or once a quarter) during the given year. After this period, the household was replaced by another household, or a new residence. In each month, the newly added households accounts for one-twelfth of the total sample.
 
-```
-For the purpose of the survey the country was divided into three broad categories. That is; rural, major urban center and other urban center categories.
-
-Category I: Rural: - This category consists of the rural areas of nine regions and one rural part of city administration found in the country. Regarding the survey domains, each region or city administration was considered to be a domain (Reporting Level) for which major findings of the survey are reported. This category totally comprises 10 reporting levels. A stratified two-stage cluster sample design was used to select samples in which the primary sampling units (PSU) were EAs. Households per sample EA were selected as a Second Stage Sampling Unit (SSU) and the survey questionnaire finally administered to all members of sample households.
-
-Category II:- Major urban centers:- In this category all regional capitals and 15 other major urban centers that had a population size of 100,000 or more in 2007 were included. Each urban center in this category was considered as a reporting level.This category has totally 26 reporting levels. In this category too, in order to select the samples, a stratified two-stage cluster sample design was implemented. The primary sampling units were EAs. Households from each sample EA were then selected as a Second Stage Unit.
-
-Category III: - Other urban centers: Urban centers in the country other than those under category II were grouped into this category. Harari, Addis Ababa and Dire Dawa do not have urban centers other than that grouped in category II. Hence, no domain was formed for these regions under this category. Unlike the above two categories a stratified three stage cluster sample design was adopted to select samples from this category. The primary sampling units were urban centers, the second stage sampling units were EAs and Households from each EA were finely selected at the third stage and the survey questionnaires administered for all of them.
-
-```    
+But since 2017, the CSA adopted a new "two-two-two" rotation scheme which interviewed a sampled household in two consecutive quarters, then excluded this household for the next two quarters, and re-visited the household for the same two quarters of the next year. In this way, the newly added households accounts for one-fourth of the total sample size per quarter.  
 
 
 ## What is the geographic significance level?
