--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -9,7 +9,7 @@
 
 ## What is the GEO LFS?
 
-The Georgian Labour Force Survey (LFS) is a household-based sample survey conducted by the Central Statistical Agency (CSA). This survey was firstly undertaken in 1999 followed by LFS 2005 as the second one in the LFS series. Till the birth of LFS 1999, there has not been a comprehensive national labor force survey representing both urban and rural area in Ethiopia. Both the 1981/82 and 1987/88 surveys only covered the rural part of the country. Therefore, the LFS came out to cover both the urban and rural areas of all regions (except Gambella region, Affar Region, and Somali) in Ethiopia to fill the vancancy of national statistics.
+The Georgian Labour Force Survey (LFS) is a household-based sample survey conducted by the Central Statistical Agency (CSA). This survey was first undertaken in 1999 followed by LFS 2005 as the second one in the LFS series. Till the birth of LFS 1999, there has not been a comprehensive national labor force survey representing both urban and rural area in Ethiopia. Both the 1981/82 and 1987/88 surveys only covered the rural part of the country. Therefore, the LFS came out to cover both the urban and rural areas of 12 regions in Georgia to fill the vacancy of national statistics.
 
 Between 1998 and 2016, the labour force indicators were from another survey, Integrated Household Survey (IHS). The labour force module was seperated from the IHS and became an independent survey in 2017. During 1998-2016, IHS maintained a sample size of 3,400 households whereas LFS maintained sample size of about 6,400 households per quarter since 2017.
 
@@ -29,19 +29,19 @@ Years and sample size of LFS harmonized for GLD are:
 | [2021](utilities/report/GEO_2021_report.pdf) | 21,367         |  60,837     |  12,041,059  | 
 | [2022](utilities/report/GEO_2022_report.pdf) | 21,366         |  60,262     |  11,955,709  | 
 
-All the six years' official annual reports are provided in the table above through the links attached to each year. Each year's annual report mainly covers employed and unemployed rates as well as their changes compared to the previous year.    
+All the six years' official annual reports are provided in the table above through the links attached to each year. Each year's annual report mainly covers employment and unemployed rates as well as their changes compared to the previous year.    
 
 ## Where can the data be found?
 
-Data from 2017 to 2022 are publicly available on [Georgia National Statistics Office website](https://www.geostat.ge/en/modules/categories/130/labour-force-survey-databases). 
+Data from 2017 to 2022 are publicly available on the [Georgia National Statistics Office website](https://www.geostat.ge/en/modules/categories/130/labour-force-survey-databases). 
 
 ## What is the sampling procedure?
 
 The GEO LFS uses a stratified random sampling design with 12 regions being the primary sampling unit, and households as the secondary sampling unit. For all six years, GEO LFS are representative at urban/rural parts of region level. 
 
-Following the technical guidance from the World Bank and other international organization, the GEO LFS revisits a certain proportion of households to build the LFS into panel data. Between 1998 and 2016, each sampled household was interviewed four times (or once a quarter) during the given year. After this period, the household was replaced by another household, or a new residence. In each month, the newly added households accounts for one-twelfth of the total sample.
+Following the technical guidance from the World Bank and other international organizations, the GEO LFS revisits a certain proportion of households to build the LFS into panel data. Between 1998 and 2016, each sampled household was interviewed four times (or once a quarter) during the given year. After this period, the household was replaced by another household, or a new residence. In each month, the newly added households account for one-twelfth of the total sample.
 
-But since 2017, the CSA adopted a new "two-two-two" rotation scheme which interviewed a sampled household in two consecutive quarters, then excluded this household for the next two quarters, and re-visited the household for the same two quarters of the next year. In this way, the newly added households accounts for one-fourth of the total sample size per quarter.  
+But since 2017, the CSA adopted a new "two-two-two" rotation scheme which interviewed a sampled household in two consecutive quarters, then excluded this household for the next two quarters, and re-visited the household for the same two quarters of the next year. In this way, the newly added households account for one-fourth of the total sample size per quarter.  
 
 
 ## What is the geographic significance level?
