--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -41,20 +41,23 @@ The GEO LFS uses a stratified random sampling design with 12 regions being the p
 
 Following the technical guidance from the World Bank and other international organizations, the GEO LFS revisits a certain proportion of households to build the LFS into panel data. Between 1998 and 2016, each sampled household was interviewed four times (or once a quarter) during the given year. After this period, the household was replaced by another household, or a new residence. In each month, the newly added households account for one-twelfth of the total sample.
 
-But since 2017, the CSA adopted a new "two-two-two" rotation scheme which interviewed a sampled household in two consecutive quarters, then excluded this household for the next two quarters, and re-visited the household for the same two quarters of the next year. In this way, the newly added households account for one-fourth of the total sample size per quarter.  
-
+But since 2017, the CSA adopted a new "two-two-two" rotation scheme which interviewed a sampled household in two consecutive quarters, then excluded this household for the next two quarters, and re-visited the household for the same two quarters of the next year. In this way, the newly added households account for one-fourth of the total sample size per quarter. However, the indicator of visiting record is not included in the raw data sets. Without the variable of visit, we are not able to uniquely identify households throughout time, and hence are not able to establish the panel data.
 
 ## What is the geographic significance level?
 
+The GEO LFS is representative at the regional level with rural/urban division.
 
 ## Other noteworthy aspects  
 
 ### Coding of industry and occupation codes
 
-In general, so far we do not have information on the version of Ethiopia's National Occupation and Industry Classifications (NOIC). The full codebooks of NOIC and its history of change are unkown to us. The only version we know for sure is NOIC 1994 which is used for LFS 1999. The codebook of NOIC 1994 can be found [here.](utilities/isic_isco/ETH_national_mappings_1999.xlsx) 
+Regarding industrial classification, the first three years, 2017-2019, used the Statistical classification of Economic Activities in the European Community (NACE) rev.1 as the national classification, which corresponds to International Standard Industrial Classification (ISIC) rev.3. The last three years, 2020-2022, used more recent versions of national and international classifications, NACE rev.2 vs.ISIC rev.4. 
 
-Even though the version information of NOIC is missing, we still managed to map the original industry and occupation variables in the raw datasets according to annual reports. The NOIC of LFS 2005 is based on ISIC Rev.3 and its ISCO counterpart is ISCO 88; the ISIC and ISCO used for year 2013 and 2021 are ISIC Rev.4 and ISCO08 respectively. We followed the guide in ETH LFS annual reports and completed the mapping this way but we are still waiting for more detials of the NOIC version and labeling of each NOIC subcategories to double check the mapping. 
+For the classification of occupation, all six years followed the International Standard Classification of Occupation (ISCO) and did not have a separate national classification. 2017 to 2019 used ISCO 1998 whereas 2020 to 2022 used ISCO 2008.  
+
+Refer to this [separate document](Correspondence_National_International_Classifications.md) for detailed correspondence table of industrial classification and coding scheme in GLD. 
+
+### Observation Exclusion
 
 
-### Mapping years of education
 
