Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -41,7 +41,7 @@ The GEO LFS uses a stratified random sampling design with 12 regions being the p
 
 Following the technical guidance from the World Bank and other international organizations, the GEO LFS revisits a certain proportion of households to build the LFS into panel data. Between 1998 and 2016, each sampled household was interviewed four times (or once a quarter) during the given year. After this period, the household was replaced by another household, or a new residence. In each month, the newly added households account for one-twelfth of the total sample.
 
-But since 2017, the CSA adopted a new "two-two-two" rotation scheme which interviewed a sampled household in two consecutive quarters, then excluded this household for the next two quarters, and re-visited the household for the same two quarters of the next year. In this way, the newly added households account for one-fourth of the total sample size per quarter. However, the indicator of visiting record is not included in the raw data sets. Without the variable of visit, we are not able to uniquely identify households throughout time, and hence are not able to establish the panel data.
+But since 2017, the CSA adopted a new "two-two-two" rotation scheme which interviewed a sampled household in two consecutive quarters, then excluded this household for the next two quarters, and re-visited the household for the same two quarters of the next year. In this way, the newly added households account for one-fourth of the total sample size per quarter. However, the indicator of visiting record is not included in the raw data sets. Without the variable of visit, we are not able to uniquely identify households throughout time, and hence are not able to establish the panel data. An overall introduction and basic information of the GEO LFS is covered in this [offical document](utilities/GEO_intro.pdf).
 
 ## What is the geographic significance level?
 
@@ -51,13 +51,15 @@ The GEO LFS is representative at the regional level with rural/urban division.
 
 ### Coding of industry and occupation codes
 
-Regarding industrial classification, the first three years, 2017-2019, used the Statistical classification of Economic Activities in the European Community (NACE) rev.1 as the national classification, which corresponds to International Standard Industrial Classification (ISIC) rev.3. The last three years, 2020-2022, used more recent versions of national and international classifications, NACE rev.2 vs.ISIC rev.4. 
+Regarding industrial classification, the first three years, 2017-2019, used the Statistical classification of Economic Activities in the European Community (NACE) rev.1 as the national classification, which corresponds to International Standard Industrial Classification (ISIC) rev.3. The last three years, 2020-2022, used more recent versions of national and international classifications, NACE rev.2 vs. ISIC rev.4. 
 
 For the classification of occupation, all six years followed the International Standard Classification of Occupation (ISCO) and did not have a separate national classification. 2017 to 2019 used ISCO 1998 whereas 2020 to 2022 used ISCO 2008.  
 
 Refer to this [separate document](Correspondence_National_International_Classifications.md) for detailed correspondence table of industrial classification and coding scheme in GLD. 
 
 ### Observation Exclusion
+
+
 
 
 
