Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -41,7 +41,7 @@ The GEO LFS uses a stratified random sampling design with 12 regions being the p
 
 Following the technical guidance from the World Bank and other international organizations, the GEO LFS revisits a certain proportion of households to build the LFS into panel data. Between 1998 and 2016, each sampled household was interviewed four times (or once a quarter) during the given year. After this period, the household was replaced by another household, or a new residence. In each month, the newly added households account for one-twelfth of the total sample.
 
-But since 2017, the CSA adopted a new "two-two-two" rotation scheme which interviewed a sampled household in two consecutive quarters, then excluded this household for the next two quarters, and re-visited the household for the same two quarters of the next year. In this way, the newly added households account for one-fourth of the total sample size per quarter. However, the indicator of visiting record is not included in the raw data sets. Without the variable of visit, we are not able to uniquely identify households throughout time, and hence are not able to establish the panel data. An overall introduction and basic information of the GEO LFS is covered in this [offical document](utilities/GEO_intro.pdf).
+But since 2017, the CSA adopted a new "two-two-two" rotation scheme which interviewed a sampled household in two consecutive quarters, then excluded this household for the next two quarters, and re-visited the household for the same two quarters of the next year. In this way, the newly added households account for one-fourth of the total sample size per quarter. However, the indicator of visiting record is not included in the raw data sets. Without the variable of visit, we are not able to uniquely identify households throughout time, and hence are not able to establish the panel data. An overall introduction and basic information of GEO LFS are covered in this [offical document](utilities/GEO_intro.pdf).
 
 ## What is the geographic significance level?
 
@@ -58,6 +58,10 @@ For the classification of occupation, all six years followed the International S
 Refer to this [separate document](Correspondence_National_International_Classifications.md) for detailed correspondence table of industrial classification and coding scheme in GLD. 
 
 ### Observation Exclusion
+
+Each year's raw data set used for GLD harmonization was assembled manually as the original survey data were divided by sections, such as demographic section and main economic activities section. During the assembling process, each year has a certain amount of observations with only demographic information but no appearance in the economic activities section. Although there is no explicit explanation for the exclusion of these observations, the most likely reason, according to the [offical document](utilities/GEO_intro.pdf), is that these observations satisfy any of the following conditions:
+
+![exclusion](utilities/exclusion.png)
 
 
 
