Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -63,7 +63,27 @@ Each year's raw data set used for GLD harmonization was assembled manually as th
 
 ![exclusion](utilities/exclusion.png)
 
+Below are the statistics of excluded observations in each year.  
 
+| **Year**	| **# Excluded**	| **# Included**	| **% Excluded**	|
+| :------:	| :-------:		| :-------:	 	| :-------:	 	|
+| 2017 | 18,604         |  54,824     | 25.34  | 
+| 2018 | 16,055         |  58,636     | 21.50  |
+| 2019 | 15,619         |  61,386     | 20.28  |
+| 2020 | 13,699         |  58,979     | 18.85  |
+| 2021 | 14,987         |  60,837     | 19.77  | 
+| 2022 | 15,264         |  60,262     | 20.21  |
 
+### Change of the Employment Standard
 
+2017 to 2019 follow the 13th International Conference of Labour Statisticians (ICLS) whereas 2020 to 2022 follow the ICLS 19. This change is shown in the employment section in the questionnaire.
+
+In 2017-2019, the respondents who indicate that they either worked for salary (A1 is Yes) or engaged in activities for own consumption (A2 is Yes) are employed (B1 is only for employed respondents).
+
+![2017_questionnaire](utilities/2017_icls.png)
+
+In 2020-2022, a separate question (A1.5) was added to confirm whether the production from your main activity (from A1) was for profit or for own use.
+
+![2020_questionnaire1](utilities/2020_icls_1.png)
+![2020_questionnaire2](utilities/2020_icls_2.png)
 
