--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -74,6 +74,17 @@ Below are the statistics of excluded observations in each year.
 | 2021 | 14,987         |  60,837     | 19.77  | 
 | 2022 | 15,264         |  60,262     | 20.21  |
 
+Below are the statistics of observations only in the demographic dataset. Since age is in the original demographic data set and is one of the inclusion conditions, it was used as an indicator to show the share of total sample size that was excluded because of age. The complete dataset containing each year's included and excluded observations are attached to the years. The variable `info_status` shows which dataset a given observation is in. 
+
+| **Year**	| **# Age<15**	| **Percentage**	| **# Age>=15**	| **Percentage** |**Total** |
+| :------:	| :-------:		| :-------:	 	| :-------:	| :-------:	| :-------:	|
+| [2017](utilities/Additional%20Data/GEO_LFS_2017_demographics_excl.dta) | 13,666 |  81.39% | 4,938 | 
+| [2018](utilities/Additional%20Data/GEO_LFS_2018_demographics_excl.dta) | 14,129 |  88%    | 1,926 |
+| [2019](utilities/Additional%20Data/GEO_LFS_2019_demographics_excl.dta) | 14,024 |  89.79% | 1,595 |
+| [2020](utilities/Additional%20Data/GEO_LFS_2020_demographics_excl.dta) | 13,098 |  95.61% | 604   |
+| [2021](utilities/Additional%20Data/GEO_LFS_2021_demographics_excl.dta) | 13,631 |  90.95% | 1,356 | 
+| [2022](utilities/Additional%20Data/GEO_LFS_2022_demographics_excl.dta) | 13,594 |  89.06% | 1,670 |
+
 ### Change of the Employment Standard
 
 2017 to 2019 follow the 13th International Conference of Labour Statisticians (ICLS) whereas 2020 to 2022 follow the ICLS 19. This change is shown in the employment section in the questionnaire.
