Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -78,12 +78,12 @@ Below are the statistics of observations only in the demographic dataset. Since 
 
 | **Year**	| **# Age<15**	| **Percentage**	| **# Age>=15**	| **Percentage** |**Total** |
 | :------:	| :-------:		| :-------:	 	| :-------:	| :-------:	| :-------:	|
-| [2017](utilities/Additional%20Data/GEO_LFS_2017_demographics_excl.dta) | 13,666 |  81.39% | 4,938 | 
-| [2018](utilities/Additional%20Data/GEO_LFS_2018_demographics_excl.dta) | 14,129 |  88%    | 1,926 |
-| [2019](utilities/Additional%20Data/GEO_LFS_2019_demographics_excl.dta) | 14,024 |  89.79% | 1,595 |
-| [2020](utilities/Additional%20Data/GEO_LFS_2020_demographics_excl.dta) | 13,098 |  95.61% | 604   |
-| [2021](utilities/Additional%20Data/GEO_LFS_2021_demographics_excl.dta) | 13,631 |  90.95% | 1,356 | 
-| [2022](utilities/Additional%20Data/GEO_LFS_2022_demographics_excl.dta) | 13,594 |  89.06% | 1,670 |
+| [2017](utilities/Additional%20Data/GEO_LFS_2017_demographics_excl.dta) | 13,666 |  81.39% | 4,938 |18.61% |18,604 | 
+| [2018](utilities/Additional%20Data/GEO_LFS_2018_demographics_excl.dta) | 14,129 |  88.00% | 1,926 |12.00% |16,055 |
+| [2019](utilities/Additional%20Data/GEO_LFS_2019_demographics_excl.dta) | 14,024 |  89.79% | 1,595 |10.20% |15,619 |
+| [2020](utilities/Additional%20Data/GEO_LFS_2020_demographics_excl.dta) | 13,098 |  95.61% | 604   |4.40%  |13,702 |
+| [2021](utilities/Additional%20Data/GEO_LFS_2021_demographics_excl.dta) | 13,631 |  90.95% | 1,356 |9.10%  |14,987 | 
+| [2022](utilities/Additional%20Data/GEO_LFS_2022_demographics_excl.dta) | 13,594 |  89.06% | 1,670 |10.90% | 15,264|
 
 ### Change of the Employment Standard
 
