--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -87,7 +87,12 @@ Below are the statistics of observations only in the demographic dataset. Since 
 
 ### Change of the Employment Standard
 
-2017 to 2019 follow the 13th International Conference of Labour Statisticians (ICLS) whereas 2020 to 2022 follow the ICLS 19. This change is shown in the employment section in the questionnaire.
+Since the passing of the [resolution concerning statistics of work, employment and labour underutilization](https://www.ilo.org/global/statistics-and-databases/standards-and-guidelines/resolutions-adopted-by-international-conferences-of-labour-statisticians/WCMS_230304/lang--en/index.htm) in 2013 at the 19th International Conference of Labour Statisticians (ICLS) surveys are at risk of a series break due to the change in the concept of employment.
+
+In short, the ICLS 19 resolution restricts employment to *work performed for others in exchange for pay or profit*, meaning that own consumption work (e.g., subsistence agriculture or building housing for oneself) are not counted as employment.
+
+The GLD codes the harmonization’s `lstatus` variable based on the concept used in the survey. In the case of the GEO LFS this change occurs after 2019, when the survey switches to new definition. This implies that estimates for 2020-2022 may not be directly comparable with those from the previous years. However, it is possible to recode `lstatus` such that it matches the previous definition. The precise details are covered in a [separate document here](Converting%20between%20ICLS%20Definitions.md)
+
 
 In 2017-2019, the respondents who indicate that they either worked for salary (A1 is Yes) or engaged in activities for own consumption (A2 is Yes) are employed (B1 is only for employed respondents).
 
