Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/1. Introduction to Georgian LFS.md
@@ -91,15 +91,4 @@ Since the passing of the [resolution concerning statistics of work, employment a
 
 In short, the ICLS 19 resolution restricts employment to *work performed for others in exchange for pay or profit*, meaning that own consumption work (e.g., subsistence agriculture or building housing for oneself) are not counted as employment.
 
-The GLD codes the harmonization’s `lstatus` variable based on the concept used in the survey. In the case of the GEO LFS this change occurs after 2019, when the survey switches to new definition. This implies that estimates for 2020-2022 may not be directly comparable with those from the previous years. However, it is possible to recode `lstatus` such that it matches the previous definition. The precise details are covered in a [separate document here](Converting%20between%20ICLS%20Definitions.md)
-
-
-In 2017-2019, the respondents who indicate that they either worked for salary (A1 is Yes) or engaged in activities for own consumption (A2 is Yes) are employed (B1 is only for employed respondents).
-
-![2017_questionnaire](utilities/2017_icls.png)
-
-In 2020-2022, a separate question (A1.5) was added to confirm whether the production from your main activity (from A1) was for profit or for own use.
-
-![2020_questionnaire1](utilities/2020_icls_1.png)
-![2020_questionnaire2](utilities/2020_icls_2.png)
-
+The GLD codes the harmonization’s `lstatus` variable based on the concept used in the survey. In the case of the GEO LFS this change occurs after 2019, when the survey switches to new definition. This implies that estimates for 2020-2022 may not be directly comparable with those from the previous years. However, it is possible to recode `lstatus` such that it matches the previous definition. The precise details are covered in a [separate document here](Converting%20between%20ICLS%20Definitions.md).
