Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
@@ -1,6 +1,6 @@
 # Introduction to Georgian national Labour Force Survey (LFS)
 
-- [What is the GEO LFS](#what-is-the-geo-lfs)
+- [What is the GEO LFS?](#what-is-the-geo-lfs)
 - [What does the GEO LFS cover?](#what-does-the-geo-lfs-cover)
 - [Where can the data be found?](#where-can-the-data-be-found)
 - [What is the sampling procedure?](#what-is-the-sampling-procedure)
