Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -76,7 +76,11 @@ Because these changes happened after 2008 and 2008 did not use province as its a
 
 ### Change of the Employment Standard
 
-1998 and 2008 follow the 13th International Conference of Labour Statisticians (ICLS) whereas 2017 follows the ICLS 19. Therefore, production of goods for own use such as tailoring or making mats for the household, or collecting water or firewood, count as "work" in 1998 and 2008 only. Accordingly, people engaging in these jobs are considered *employed* only in 1998 and 2008.   
+Since the passing of the [resolution concerning statistics of work, employment and labour underutilization](https://www.ilo.org/global/statistics-and-databases/standards-and-guidelines/resolutions-adopted-by-international-conferences-of-labour-statisticians/WCMS_230304/lang--en/index.htm) in 2013 at the 19th International Conference of Labour Statisticians (ICLS) surveys are at risk of a series break due to the change in the concept of employment.
+
+In short, the ICLS 19 resolution restricts employment to *work performed for others in exchange for pay or profit*, meaning that own consumption work (e.g., subsistence agriculture or building housing for oneself) are not counted as employment.
+
+The GLD codes the harmonization’s `lstatus` variable based on the concept used in the survey. In the case of the NPL LFS this change occurs between 2008 and 2017, when the survey switches to new definition. This implies that estimates for 2017 may not be directly comparable with those from the previous years. However, it is possible to recode `lstatus` such that it matches the previous definition. The precise details are covered in a [separate document here](Converting%20between%20ICLS%20Definitions.md).
 
 ### Definition of Migrants
 
