Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
@@ -9,7 +9,7 @@
 
 ## What is the GEO LFS?
 
-The Georgian Labour Force Survey (LFS) is a household-based sample survey conducted by the Central Statistical Agency (CSA). This survey was first undertaken in 1999 followed by LFS 2005 as the second one in the LFS series. Till the birth of LFS 1999, there has not been a comprehensive national labor force survey representing both urban and rural area in Ethiopia. Both the 1981/82 and 1987/88 surveys only covered the rural part of the country. Therefore, the LFS came out to cover both the urban and rural areas of 12 regions in Georgia to fill the vacancy of national statistics.
+The Georgian Labour Force Survey (LFS) is a household-based sample survey conducted by the Central Statistical Agency (CSA). This survey was first undertaken in 1999 followed by LFS 2005 as the second one in the LFS series. Till the birth of LFS 1999, there has not been a comprehensive national labor force survey representing both urban and rural area in Georgia. Both the 1981/82 and 1987/88 surveys only covered the rural part of the country. Therefore, the LFS came out to cover both the urban and rural areas of 12 regions in Georgia to fill the vacancy of national statistics.
 
 Between 1998 and 2016, the labour force indicators were from another survey, Integrated Household Survey (IHS). The labour force module was seperated from the IHS and became an independent survey in 2017. During 1998-2016, IHS maintained a sample size of 3,400 households whereas LFS maintained sample size of about 6,400 households per quarter since 2017.
 
