Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
@@ -37,11 +37,7 @@ Data from 2017 to 2022 are publicly available on the [Georgia National Statistic
 
 ## What is the sampling procedure?
 
-The GEO LFS uses a stratified random sampling design with 12 regions being the primary sampling unit, and households as the secondary sampling unit. For all six years, GEO LFS are representative at urban/rural parts of region level. 
-
-Following the technical guidance from the World Bank and other international organizations, the GEO LFS revisits a certain proportion of households to build the LFS into panel data. Between 1998 and 2016, each sampled household was interviewed four times (or once a quarter) during the given year. After this period, the household was replaced by another household, or a new residence. In each month, the newly added households account for one-twelfth of the total sample.
-
-But since 2017, the CSA adopted a new "two-two-two" rotation scheme which interviewed a sampled household in two consecutive quarters, then excluded this household for the next two quarters, and re-visited the household for the same two quarters of the next year. In this way, the newly added households account for one-fourth of the total sample size per quarter. However, the indicator of visiting record is not included in the raw data sets. Without the variable of visit, we are not able to uniquely identify households throughout time, and hence are not able to establish the panel data. An overall introduction and basic information of GEO LFS are covered in this [offical document](utilities/GEO_intro.pdf).
+The GEO LFS uses a stratified random sampling design with 12 regions being the primary sampling unit, and households as the secondary sampling unit. An overall introduction and basic information of GEO LFS are covered in this [offical document](utilities/GEO_intro.pdf).
 
 ## What is the geographic significance level?
 
@@ -74,16 +70,16 @@ Below are the statistics of excluded observations in each year.
 | 2021 | 14,987         |  60,837     | 19.77  | 
 | 2022 | 15,264         |  60,262     | 20.21  |
 
-Below are the statistics of observations only in the demographic dataset. Since age is in the original demographic data set and is one of the inclusion conditions, it was used as an indicator to show the share of total sample size that was excluded because of age. The complete dataset containing each year's included and excluded observations are attached to the years. The variable `info_status` shows which dataset a given observation is in. 
+Below are the statistics of observations only in the demographic dataset. Since age is in the original demographic data set and is one of the inclusion conditions, it was used as an indicator to show the share of total sample size that was excluded because of age. Note that these observations excluded do not have any weights, hence we were not able to conduct any analysis using these data.
 
 | **Year**	| **# Age<15**	| **Percentage**	| **# Age>=15**	| **Percentage** |**Total** |
 | :------:	| :-------:		| :-------:	 	| :-------:	| :-------:	| :-------:	|
-| [2017](utilities/Additional%20Data/GEO_LFS_2017_demographics_excl.dta) | 13,666 |  81.39% | 4,938 |18.61% |18,604 | 
-| [2018](utilities/Additional%20Data/GEO_LFS_2018_demographics_excl.dta) | 14,129 |  88.00% | 1,926 |12.00% |16,055 |
-| [2019](utilities/Additional%20Data/GEO_LFS_2019_demographics_excl.dta) | 14,024 |  89.79% | 1,595 |10.20% |15,619 |
-| [2020](utilities/Additional%20Data/GEO_LFS_2020_demographics_excl.dta) | 13,098 |  95.61% | 604   |4.40%  |13,702 |
-| [2021](utilities/Additional%20Data/GEO_LFS_2021_demographics_excl.dta) | 13,631 |  90.95% | 1,356 |9.10%  |14,987 | 
-| [2022](utilities/Additional%20Data/GEO_LFS_2022_demographics_excl.dta) | 13,594 |  89.06% | 1,670 |10.90% | 15,264|
+| 2017| 13,666 |  81.39% | 4,938 |18.61% |18,604 | 
+| 2018 | 14,129 |  88.00% | 1,926 |12.00% |16,055 |
+| 2019 | 14,024 |  89.79% | 1,595 |10.20% |15,619 |
+| 2020 | 13,098 |  95.61% | 604   |4.40%  |13,702 |
+| 2021 | 13,631 |  90.95% | 1,356 |9.10%  |14,987 | 
+| 2022 | 13,594 |  89.06% | 1,670 |10.90% | 15,264|
 
 ### Change of the Employment Standard
 
