Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
@@ -33,7 +33,7 @@ All the six years' official annual reports are provided in the table above throu
 
 ## Where can the data be found?
 
-Data from 2017 to 2022 are publicly available on the [Georgia National Statistics Office website](https://www.geostat.ge/en/modules/categories/130/labour-force-survey-databases). 
+Main data from 2017 to 2022 are publicly available on the [Georgia National Statistics Office website](https://www.geostat.ge/en/modules/categories/130/labour-force-survey-databases). The downloadable datasets include sub-datasets that cover different sections in the questionnaire, namely demographics, economic activities, excluded populations, and personal weights.  
 
 ## What is the sampling procedure?
 
