--- a/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
@@ -35,6 +35,8 @@ All the six years' official annual reports are provided in the table above throu
 
 Main data from 2017 to 2022 are publicly available on the [Georgia National Statistics Office website](https://www.geostat.ge/en/modules/categories/130/labour-force-survey-databases). The downloadable datasets include sub-datasets that cover different sections in the questionnaire, namely demographics, economic activities, excluded populations, and personal weights.  
 
+However, employment-related variables have been already coded, which means that they are not the very original question-based variables. To validate the derived variables and code from the raw variables, we obtained raw data sets of the labour section and wage from the National Statistics Office of Georgia. These data are not publicly available. Details about the derived variables are in the [other noteworthy aspects](#other-noteworthy-aspects). 
+
 ## What is the sampling procedure?
 
 The GEO LFS uses a stratified random sampling design with 12 regions being the primary sampling unit, and households as the secondary sampling unit. An overall introduction and basic information of GEO LFS are covered in this [offical document](utilities/GEO_intro.pdf).
