Update 1. Introduction to Georgian LFS.md

--- a/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
+++ b/Support/B - Country Survey Details/GEO/LFS/1. Introduction to Georgian LFS.md
@@ -35,7 +35,7 @@ All the six years' official annual reports are provided in the table above throu
 
 Main data from 2017 to 2022 are publicly available on the [Georgia National Statistics Office website](https://www.geostat.ge/en/modules/categories/130/labour-force-survey-databases). The downloadable datasets include sub-datasets that cover different sections in the questionnaire, namely demographics, economic activities, excluded populations, and personal weights.  
 
-However, employment-related variables have been already coded, which means that they are not the very original question-based variables. To validate the derived variables and code from the raw variables, we obtained raw data sets of the labour section and wage from the National Statistics Office of Georgia. These data are not publicly available. Details about the derived variables are in the [other noteworthy aspects](#derived-variables). 
+However, employment-related variables have been already coded, which means that they are not the very original question-based variables. To validate the derived variables and code from the raw variables, we obtained raw data sets of the labour section and wage from the National Statistics Office (NSO) of Georgia. These data are not publicly available. Details about the derived variables are in the [other noteworthy aspects](#derived-variables). 
 
 ## What is the sampling procedure?
 
@@ -56,6 +56,8 @@ For the classification of occupation, all six years followed the International S
 Refer to this [separate document](Correspondence_National_International_Classifications.md) for detailed correspondence table of industrial classification and coding scheme in GLD. 
 
 ### Derived Variables
+
+In the public data from the NSO website, labour adn employment status information was already coded. One of the sub-data sets "LFS_ECSTAT.dta" which is the economic activity data set, have derived variables such as `Employed`, `Hired`, `Self_employed`, and `Unemployed`. [This](utilities/) is the complete variable list with labels and explanations from the NSO website.   
 
 
 ### Observation Exclusion
